update cetakan label pasien

--- a/Setting.ini
+++ b/Setting.ini
@@ -11,9 +11,9 @@ SummaryList=Microsoft XPS Document Writer~
 CetakResep=Microsoft XPS Document Writer~
 CetakRMK=Microsoft XPS Document Writer~
 [Koneksi]
-a=103.153.40.130~
-b=54322~
+a=192.168.98.237~
+b=5994~
 c=postgres~
-d=@@34Pr3scr1ption34@@~
-e=rs_amc~
-f=http://103.153.40.130/service/medifirst2000~
+d=@@36Pr3scr1ption36@@~
+e=rsud_mangusada~
+f=http://192.168.98.237/service/medifirst2000~
